--- a/Feature_Engineering_text_data.ipynb
+++ b/Feature_Engineering_text_data.ipynb
@@ -1190,6 +1190,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying Machine Mearning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
@@ -1215,6 +1222,13 @@
     "\n",
     "m1 = simple_logistic_classify(X_tr_bow, y_tr, X_te_bow, y_te, 'bow')\n",
     "m3 = simple_logistic_classify(X_tr_tfidf, y_tr, X_te_tfidf, y_te, 'tfidf')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fine-Tuning"
    ]
   },
   {
